# ml-project

./: .gitignore  cookiecutter.json  pyproject.toml
scripts/: dev-link.sh  develop.sh  ml-move-back.sh  ml-move.sh  test.sh
{{cookiecutter.project_slug}}/: .env  README.md  docker-compose.override.yml  docker-compose.yml
{{cookiecutter.project_slug}}/airflow/: dockerfile
{{cookiecutter.project_slug}}/airflow/dags/: dummy_dag.py
{{cookiecutter.project_slug}}/airflow/scripts/: scheduler-entrypoint.sh  test_pre_start.py  webserver-entrypoint.sh  worker-entrypoint.sh
{{cookiecutter.project_slug}}/flower/: dockerfile
{{cookiecutter.project_slug}}/mlflow/: dockerfile
{{cookiecutter.project_slug}}/mlflow/scripts/: create_mlflow_bucket.py  entrypoint.sh  test_pre_start.py
{{cookiecutter.project_slug}}/src/: pyproject.toml
{{cookiecutter.project_slug}}/src/alembic/: env.py
{{cookiecutter.project_slug}}/src/src/core/: config.py
{{cookiecutter.project_slug}}/src/src/db/: base.py  base_class.py  session.py
{{cookiecutter.project_slug}}/src/src/models/: openflights.py
