[tool.poetry]
name = "ml-project-react-fastapi-postgres"
version = "0.1.0"
description = ""
authors = ["Jakob Jul Elben <jakob@datamaga.com>"]

[tool.poetry.dependencies]
python = "^3.8"
cookiecutter = "^1.7.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
