[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Admin <admin@admin.com>"]

[tool.poetry.dependencies]
python = "^3.7"
sqlalchemy = "^1.3.16"
psycopg2-binary = "^2.8.5"
geoalchemy2 = "^0.7.0"

[tool.poetry.dev-dependencies]
alembic = "^1.4.2"
ipython = "^7.13.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
